Version 5.0.2
- Added "noinline" attribute
- Fixed a compiler warning in ff.cc
- Fixed a bug with returning structures in C

Version 5.0.1
- Added getms() and getus() for BASIC
- Allow ptra++ in BASIC assembly
- Allow use of constants from other objects in inline assembly
- Allow access to array member variables in Spin
- Convert "ret" in inline assembly to a jump to the end of it
- Fixed a C parser crash
- Fixed a problem with padding C structs
- Fixed a bug parsing strings in C __pasm
- Provided separate namespace for labels in C
- Removed support for Rev A silicon (it was not working anyway)

Version 5.0.0
- Renamed "fastspin" to "flexspin"
- Added "flexcc" compiler front end
- Added --version flag to fastspin
- Added asin(), acos(), atan(), atan2() to BASIC
- Fixed BASIC ^ operator when used with --fixedreal
- Made sin() and cos() work with --fixedreal
- New atan2() implementation using the CORDIC on P2

Version 4.5.0
- Added a warning for C functions with mismatched parameters (it used to silently accept this)
- Added "." character for PRINT USING in BASIC
- Added support for binary floating point constants in C
- Added __builtin_clz() for C
- Added gettimeofday() / settimeofday()
- Added scanf() family of functions for C
- Allowed empty FOR loops in BASIC
- Fixed a number of problems in C struct initialization
- Fixed printing floats in C when --fixedreal is given
- Fixed BASIC FOR loops with negative floating point steps
- Fixed binary and hex constants in C to be unsigned when appropriate
- Fixed a problem with passing small arrays as parameters in C
- Fixed ^ in BASIC
- Made expf and logf use the CORDIC on P2 and ROM on P1
- Made FIXED a reserved keyword in BASIC (for future expansion)
- Updated time functions to work sensibly.

Version 4.4.0
- Added simplified designated initializers (like { .x=1 }) for structs and arrays
- Added float_t and double_t to math.h
- Added fseek() and ftell() stdio functions
- Added Spin2 RECV pointer